@@ -427,8 +427,9 @@ reposizes_stats = stat desc $ nojson $ do
 		. M.toList
 		<$> cachedRepoData
 	let maxlen = maximum (map (length . snd) l)
+	descm <- lift uuidDescriptions
 	-- This also handles json display.
-	s <- lift $ prettyPrintUUIDsWith (Just "size") desc $
+	s <- lift $ prettyPrintUUIDsWith (Just "size") desc descm $
 		map (\(u, sz) -> (u, Just $ mkdisp sz maxlen)) l
 	return $ countRepoList (length l) s
   where
